Fix input appearance on Safari.

--- a/components/forms/content_search/_content-search.scss
+++ b/components/forms/content_search/_content-search.scss
@@ -36,6 +36,7 @@ Style guide: forms.content-search
     font-size: em($base);
     color: $text-medium-body;
     font-family: $text--merriweather-light;
+    appearance: none;
 
     &::placeholder {
       color: $text-light-body;
